# PastePrompt

./: .gitignore  LICENSE  README.md  prompts.yaml  pyproject.toml
config/: prompts.example.yaml
src/pasteprompt/: __init__.py  __main__.py  cli.py  config.py  launchagent.py  pasteboard.py  prompts.py  py.typed  utils.py  workflow.py
src/pasteprompt/menubar/: __init__.py  app.py  hotkey.py  paste.py  permissions.py  picker.py  watcher.py
templates/workflow/: Info.plist.template  document.wflow.template
tests/: __init__.py  test_cli.py  test_launchagent.py  test_prompts.py  test_workflow.py
tests/test_menubar/: __init__.py  test_hotkey.py  test_paste.py  test_permissions.py
